testsuite/tests/typecheck/should_fail/tcfail211.stderr

tcfail211.hs:5:1: error: [GHC-75863]
    • Illegal implicit parameter ‘?imp::Int’
    • In the context: ?imp::Int
      While checking the super-classes of class ‘D’
      In the class declaration for ‘D’

tcfail211.hs:8:10: error: [GHC-75863]
    • Illegal implicit parameter ‘?imp::Int’
    • In the instance declaration for ‘D Int’
